  of them so skin and language specific markup does not need to be saved inside the parser cache
  note that this changes the cache key making all old entries in the parser cache invalid you
  can set $wgUseEditSectionTokens to false to disable this and keep your old parser cache entries.
  Note that this feature should reduce parser cache fragmentation when enabled.

=== New features in 1.18 ===
* Added a special page, disabled by default, that allows users with the
  'disableaccount' privilege to permanently deactivate user accounts.
* (bug 8130) Query pages should limit to content namespaces, not just main namespace 
* Search suggestions (other than in the Vector skin) will now use the HTML5
  datalist feature where supported, currently only Firefox 4.

=== Bug fixes in 1.18 ===
* (bug 23119) WikiError class and subclasses are now marked as deprecated
* (bug 10871) Javascript and CSS pages in MediaWiki namespace are no longer
  treated as wikitext on preview.
* (bug 22753) Output from update.php is more clear when things changed, entries
  indicating nothing changed are now all prefixed by "..."
* Page existence is now not revealed (in the colour of the tabs) to users who
  cannot read the page in question.
* (bug 19006) {{REVISIONUSER}} no longer acts like {{CURRENTUSER}} in some cases
* (bug 16019) $wgArticlePath = "/$1" no longer breaks API edit/watch actions
* (bug 18372) File types blacklisted by $wgFileBlacklist will no longer be shown as
  "Permitted file types" on the upload form
* (bug 26379) importImages.php gives more descriptive error message on failure.
* (bug 26410) + signs are no longer treated as spaces in internal links if 
  link has a % sign in it.
* (bug 26412) Search results headers no longer show a bogus edit link.
* (bug 26540) Fixed wrong call to applyPatch in MysqlUpdater
* (bug 26574) Added 'upload' to $wgRestrictionTypes, allowing upload protected 
  pages to be queried via the API and Special:ProtectedPages, and allowing 